styles.css
* {
    box-sizing: border-box;
}

/* --- GLOBAL STYLES --- */

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    font-family: "Poppins", arial, sans-serif;
}

/* --- COLORS AND FONTS --- */

:root {
    --main-color: rgb(54, 19, 102);
    --acc-color: rgb(191, 0, 239);
    --txt-color: #151515;
    --bg-gray: #443e52;
    --white: #fbfcfb;
    --white-op: rgba(247, 247, 247, 0.9);
}

h1, h2 {
    font-weight: 700;
    line-height: 1.5;
    }
    h1 {
        font-size: 2.5rem;
    }
    h2 {
        font-size: 2rem;
    }

h3 {
    font-size: 1.4rem;
    font-weight: 600;
    line-height: 1;
}

p, a {
    font-weight: 200;
    line-height: 1.5;
    }
    a {
        text-decoration: none;
    }

/* --- CONTAINERS --- */

.container {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    }
    .container--sm {
        width: 65%;
    }

/* --- COMPONENTS --- */

.button {
    display: block;
    width: 160px;
    padding-top: .5rem;
    padding-bottom: .5rem;
    border: solid var(--acc-color) 2px;
    border-radius: 10px;
    font-weight: 600;
    text-align: center;
    color: var(--white);
    background-color: var(--acc-color);
    }
    .button:hover {
        border: solid var(--white) 2px;
        color: var(--main-color);
        background-color: var(--white);
        transition: 100ms;
    }
        .button--inv:hover {
            color: var(--white);
            border-color: var(--main-color);
            background-color: var(--main-color);
        }

/* --- STRUCTURE --- */

.header {
    height: 70px;
    margin-top: 1.5rem;
    z-index: 100;
    }
    .header__section {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

.navbar__link {
    color: var(--white);
    }
    .navbar__link:not(:last-child) {
        margin-right: 2rem;
    }
    .navbar__link:hover {
        color: var(--acc-color);
    }

.hero {
    position: relative;
    height: 590px;
    margin-top: -100px;
    margin-bottom: 100px;
    background: var(--main-color);
    }
    .hero__section {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding-top: 180px;
    }
    .hero__cta {
        width: 60%;
        color: var(--white);
    }
        .hero__cta p {
            margin-bottom: 1.2rem;
        }
        .hero__cta h3 {
            margin-bottom: 2.2rem;
        }
    .hero__img {
        position: absolute;
        right: 10%;
        bottom: 0;
    }

    .services {
        margin-bottom: 100px;
    }
        .services h2 {
            margin-bottom: 3rem;
            text-align: center;
            color: var(--main-color);
        }
        .services__cards {
            display: flex;
            justify-content: space-between;
        }
        .services__card {
            width: 190px;
            text-align: center;
        }
        .services__img {
            border-radius: 10px;
        }

.quote {
    height: 420px;
    background: var(--main-color);
    }
    .quote__section {
        padding-top: 90px;
    }
    .quote__p {
        font-size: 1.25rem;
        color: var(--white);
    }
        .quote__p--author {
            text-align: right;
            font-style: italic;
        }

.cta {
    height: 500px;
    padding-top: 144px;
    background-image: url(media/cta_bg.webp);
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    }
    .cta__section {
        display: flex;
        justify-content: space-between;
        align-items: center;
        height: 200px;
        padding: 1.2rem 6rem;
        border-radius: 10px;
        background: var(--white-op);
    }
    .cta__text {
        width: 60%;
        color: var(--txt-color);
    }

.footer {
    margin-top: auto;
    background: var(--main-color);
}
    .footer__copyright {
        height: 40px;
        padding-top: 10px;
        text-align: center;
        color: var(--white);
    }
    .footer__copyright a {
        font-weight: 400;
        color: var(--white);
    }
        .footer__copyright a:hover {
            color: var(--acc-color);
        }

